--- a/templates/bmc/css/pages/ambassadors.scss
+++ b/templates/bmc/css/pages/ambassadors.scss
@@ -1,14 +1,8 @@
 @import 'variables.scss';
 @import 'mixins.scss';
 
-.contentpaneopen {
+.wrapper {
   @include grid-template(repeat(4, [col] 1fr), 2fr 1fr auto 1fr);
-  p:first-child {
-    margin: 0;
-  }
-  p:nth-child(2) {
-    margin: 0;
-  }
 }
 
 //Header
