--- a/templates/bmc/html/com_resources/resourceportal.scss
+++ b/templates/bmc/html/com_resources/resourceportal.scss
@@ -1,74 +1,10 @@
-//Color variables
-$green: #84bf41;
-$dark-blue: #222b37;
-// $dark-blue: #2E2D4D;
-$teal: #007991;
-$pink: #cb48b7;
-$med-blue: #5f5980;
-$light-gray: #F1F2F2;
-$orange: #cca231;
-$black: #000;
-$white: #fff;
-
-//Mixins for showcase module
-@mixin showcase-header($font-size, $line-height, $lines-to-show) {
-  display: block; /* Fallback for non-webkit */
-  display: -webkit-box;
-  height: $font-size*$line-height*$lines-to-show; /* Fallback for non-webkit */
-  margin: 0 auto;
-  font-size: $font-size;
-  line-height: $line-height;
-  -webkit-line-clamp: $lines-to-show;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  color: $white;
-}
-@mixin showcase-tag($background-color, $link-color) {
-  position: absolute;
-  bottom: 50px;
-  text-transform: uppercase;
-  font-weight: bold;
-  font-size: 11px;
-  padding: 5px 10px;
-  background-color: $background-color;
-  a {
-    color: $link-color;
-  }
-}
-@mixin image-gradient {
-  content: '';
-  display: block;
-  position: absolute;
-  bottom: 0;
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 50%,rgba(0,0,0,1) 100%);
-  height: 200px;
-  width: 100%;
-}
+@import '../css/variables.scss';
+@import '../css/mixins.scss';
 
 .content {
-  display: grid;
-  grid-template-columns: repeat(4, [col] 1fr);
-  grid-template-rows: repeat(5, [row] auto);
+  @include grid-template(repeat(4, [col] 1fr), repeat(5, [row] auto));
 }
-.link {
-  text-transform: uppercase;
-  margin-top: 3rem;
-  a {
-    color: $white;
-    padding: .25em .75em;
-    border: 1px solid $white;
-  }
-  &:active {
-    color: $white;
-  }
-  &:visited {
-    color: $white;
-  }
-  &:hover {
-    color: $orange;
-  }
-}
+
 .link-anchor {
   color: inherit;
   &:hover {
@@ -93,30 +29,13 @@ $white: #fff;
 
 //Feature
 .feature {
-  display: flex;
-  flex-wrap: wrap;
+  @include flexbox(wrap);
+  @include grid(col / span 4, row);
+  @include grid-template(repeat(auto-fit, minmax(175px, 1fr)), null, 5px);
   justify-content: center;
-  grid-column: col / span 4;
-  grid-row: row;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(175px, 1fr));
   grid-auto-rows: 300px;
-  grid-gap: 5px;
   .resource-img {
-      width: 100%;
-      height: 100%;
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-      a {
-        display: block;
-        height: 100%;
-      }
-    }
-    .resource-img::after {
-      @include image-gradient;
+      @extend %showcase-img;
     }
     .resource {
       position: relative;
@@ -139,8 +58,7 @@ $white: #fff;
 
 //search
 .search-wrapper {
-  grid-column: col / span 4;
-  grid-row: row 2;
+  @include grid(col / span 4, row 2);
   justify-content: center;
   text-align: center;
   padding: 30px 0;
@@ -158,17 +76,12 @@ $white: #fff;
 
 //Discover
 .discover {
-  display: flex;
-  flex-wrap: wrap;
-  grid-column: col / span 4;
-  grid-row: row 3;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: auto;
-  grid-gap: 10px;
+  @include flexbox(wrap);
+  @include grid(col / span 4, row 3);
+  @include grid-template(repeat(3, 1fr), auto, 10px);
   padding: 30px;
   h2 {
-    grid-column: 1 / span 3;
+    @include grid(1 / span 3, null);
     width: 100%;
   }
   h4 {
@@ -183,23 +96,15 @@ $white: #fff;
 
 //OER and Resources
 #one {
-  grid-column: col / span 4;
-  grid-row: row 4;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, minmax(20rem, auto));
-  background: url('/app/site/media/images/pexels-photo-590493.jpg');
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%,rgba(0,0,0,0.6) 100%), url('/app/site/media/images/pexels-photo-590493.jpg');
-  background-size: cover;
+  @include grid(col / span 4, row 4);
+  @include grid-template(repeat(4, 1fr), repeat(3, minmax(20rem, auto)));
+  @include bcg-img('/app/site/media/images/pexels-photo-590493.jpg');
 }
 .resource-oer {
-  grid-column: 1 / span 4;
-  grid-row: 1;
+  @include flexbox;
+  @include grid(1 / span 4, 1);
   .oer {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-
+    align-self: center;
     color: $white;
     h2 {
       color: $white;
@@ -209,40 +114,26 @@ $white: #fff;
   }
 }
 .resource-fmn {
-  display: flex;
+  @include flexbox;
+  @include grid(1 / span 4, 2);
+  @include grid-template(repeat(4, 1fr), null);
   flex: 1;
-  grid-column: 1 / span 4;
-  grid-row: 2;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
   color: $white;
   h2 {
     color: $white;
   }
   .module-fmn {
-    display: flex;
-    flex-wrap: wrap;
+    @include flexbox(wrap);
+    @include grid(1 / span 2, null);
+    @include grid-template(repeat(auto-fit, minmax(175px, 1fr)), null, 5px);
+    grid-auto-rows: 300px;
     justify-content: center;
     width: 50%;
-    grid-column: 1 / span 2;
     padding: 1em;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(175px, 1fr));
-    grid-auto-rows: 300px;
-    grid-gap: 5px;
     align-self: center;
     }
     .resource-img {
-        width: 100%;
-        height: 100%;
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-        }
-      }
-      .resource-img::after {
-        @include image-gradient;
+        @extend %showcase-img;
       }
       .resource {
         position: relative;
@@ -262,54 +153,40 @@ $white: #fff;
         }
       }
   .fmn {
+    @include grid(3 / span 2, null);
     width: 50%;
     padding: 2.5em;
-    grid-column: 3 / span 2;
     align-self: center;
   }
 }
 .resource-partner {
-  display: flex;
+  @include flexbox;
+  @include grid(1 / span 4, 3);
+  @include grid-template(repeat(4, 1fr), null);
   flex: 1;
-  grid-column: 1 / span 4;
-  grid-row: 3;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
   color: $white;
   h2 {
     color: $white;
   }
   .partner {
+    @include grid(1 / span 2, null);
     width: 50%;
-    grid-column: 1 / span 2;
     padding: 2.5em;
     align-self: center;
   }
   .module-partner {
-    width: 50%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    grid-column: 3 / span 2;
-    padding: 1em;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(175px, 1fr));
+    @include flexbox(wrap);
+    @include grid(3 / span 2, null);
+    @include grid-template(repeat(auto-fit, minmax(175px, 1fr)), null, 5px);
     grid-auto-rows: 300px;
-    grid-gap: 5px;
+    width: 50%;
+    justify-content: center;
+    padding: 1em;
     align-self: center;
 
   }
   .resource-img {
-      width: 100%;
-      height: 100%;
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-    }
-    .resource-img::after {
-      @include image-gradient;
+    @extend %showcase-img;
     }
     .resource {
       position: relative;
@@ -332,12 +209,10 @@ $white: #fff;
 
 //Collections
 #two {
-  display: flex;
+  @include flexbox;
+  @include grid(col / span 4, row 5);
+  @include grid-template(repeat(2, 1fr), null);
   flex: 1;
-  grid-column: col / span 4;
-  grid-row: row 5;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
   .big {
     width: 50%;
     img {
@@ -351,24 +226,19 @@ $white: #fff;
     padding: 2.5em;
     align-self: center;
     .link {
-      a {
-        color: $green;
-        border: 1px solid $green;
-      }
+      @include buttons($green);
+      margin-top: 3em;
     }
   }
 }
 
 //Software
 #three {
-  display: flex;
+  @include flexbox;
+  @include grid(col / span 4, row 6);
+  @include grid-template(null, repeat(2, 1fr));
+  @include bcg($med-blue, $white);
   flex: 1;
-  grid-column: col / span 4;
-  grid-row: row 6;
-  display: grid;
-  grid-template-rows: repeat(2, 1fr);
-  background-color: $med-blue;
-  color: $white;
   h2 {
     color: $white;
   }
@@ -376,22 +246,23 @@ $white: #fff;
     width: 50%;
     text-align: center;
     padding: 2.5em;
+    .link {
+      @include buttons($white);
+      margin-top: 3em;
+    }
   }
   .software-logos {
+    @include flexbox(wrap);
+    @include grid-template(repeat(auto-fit, minmax(100px, 1fr)), null, 5px);
+    grid-auto-rows: 125px;
     width: 50%;
     padding: 2.5em;
-    display: flex;
-    flex-wrap: wrap;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-    grid-auto-rows: 125px;
-    grid-gap: 5px;
     justify-items: center;
     align-self: center;
     text-align: center;
     .logo-wrap {
       img {
-        height: 75%;
+        height: 65%;
         object-fit: scale-down;
       }
       h6 {
@@ -403,73 +274,65 @@ $white: #fff;
 }
 @media only screen and (min-width: 320px) and (max-width: 900px) {
   .discover {
-    grid-template-rows: repeat(4, 1fr);
+    @include grid-template(null, repeat(4, 1fr));
     justify-content: center;
     .resources {
       width: 100%;
-      grid-column: span 3;
+      @include grid(span 3, null);
     }
   }
   #one {
     .resource-fmn {
       flex-wrap: wrap;
-      grid-template-rows: 1fr 2fr;
+      @include grid-template(null, 1fr 2fr);
       .fmn {
+        @include grid(1 / span 4, 1);
         width: 100%;
         order: -1;
-        grid-column: 1 / span 4;
-        grid-row: 1;
       }
       .module-fmn {
+        @include grid(1 / span 4, 2);
         width: 100%;
-        grid-column: 1 / span 4;
-        grid-row: 2;
       }
     }
     .resource-partner {
       flex-wrap: wrap;
-      grid-template-rows: 1fr 2fr;
+      @include grid-template(null, 1fr 2fr);
       .partner {
+        @include grid(1 / span 4, 1);
         width: 100%;
         order: -1;
-        grid-column: 1 / span 4;
-        grid-row: 1;
       }
       .module-partner {
+        @include grid(1 / span 4, 2);
         width: 100%;
-        grid-column: 1 / span 4;
-        grid-row: 2;
       }
     }
   }
   #two {
     flex-wrap: wrap;
-    grid-template-rows: 1fr 1fr;
+    @include grid-template(null, repeat(2, 1fr));
     .collections {
+      @include grid(1 / span 4, 1);
       width: 100%;
-      grid-column: 1 / span 4;
-      grid-row: 1;
     }
     .big {
+      @include grid(1 / span 4, 2);
       width: 100%;
       height: auto;
       order: 1;
-      grid-column: 1 / span 4;
-      grid-row: 2;
     }
   }
   #three {
     flex-wrap: wrap;
-    grid-template-rows: repeat(2, 1fr);
+    @include grid-template(null, repeat(2, 1fr));
     .software {
+      @include grid(1 / span 4, 1);
       width: 100%;
-      grid-column: 1 / span 4;
-      grid-row: 1;
     }
     .software-logos {
+      @include grid(1 / span 4, 2);
       width: 100%;
-      grid-column: 1 / span 4;
-      grid-row: 2;
     }
   }
 }
